fix: wrong functionalities
